5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1643_2711.log
== TEST (2019-04-13 22:41:14) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))

if(valor-valtickets-valpasses):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:42:00) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))

if(valor-valtickets-valpasses):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:42:37) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))

if(valor-valtickets-valpasses):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:46:24) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))

if(valor-valtickets-valpasses):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:51:27) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))
if(formula >100):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:53:24) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))
if(formula > ou < 100):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(formula > ou < 100):
NameError: name 'ou' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:54:05) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))
if(formula > ou < ):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- ERROR:
File "XXXX", line 7
    if(formula > ou < ):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:54:56) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))
if(formula >= 0 ):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:00:10) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))

if(formula <= 0 ):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:00:53) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))

if(formula <> 0 ):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- ERROR:
File "XXXX", line 8
    if(formula <> 0 ):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:01:08) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))

if(formula == 0 ):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:01:57) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))

if(formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 23:02:18) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)-(quantonibus*valpasses)))

if(formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:06:44) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)+(quantonibus*valpasses)))

if(formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:07:33) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = (valor-((quantru*valtickets)+(quantonibus*valpasses)))

if(formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:11:20) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = ((quantru*valtickets)+(quantonibus*valpasses))

if(valor >=formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:11:42) 
-- CODE:
valor = float(input("digite valor: "))
quantru = int(input("digite ru: "))
valtickets = float(input("digite valor tickets: "))
quantonibus = int(input("digite quantidade onibus: "))
valpasses = float(input("digite passes: "))
formula = ((quantru*valtickets)+(quantonibus*valpasses))

if(valor >=formula):
	mensagem = ("SUFICIENTE")
else:
	mensagem = ("INSUFICIENTE")

print(mensagem)
-- EXECUTION TIME:
0.247773
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
